syntax = "proto3";

option csharp_namespace = "grpcServer";

package weatherForeacast;

service WeatherForeacaster {
  rpc HowIsTheWeather (WeatherRequest) returns (stream WeatherForecast);
}

// Message
message WeatherForecast {
    int64 date = 1;
    int32 temperatureC = 2;
    int32 temperatureF = 3;
    string summary = 4;
}

// The request message containing the user's name.
message WeatherRequest {

}